// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App Snapshots > renders completed state correctly 1`] = `
<div
  class="sidebar mode-review"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot "
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        title="Session History"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        title="Settings"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="review-mode"
  >
    <div
      class="session-summary"
    >
      <span
        class="summary-check"
      >
        ✓
      </span>
      <span
        class="summary-label"
      >
        Complete
      </span>
      <span
        class="summary-duration"
      >
        0:30
      </span>
      <span
        class="summary-quality quality-unknown"
      >
        Unknown
      </span>
      <span
        class="summary-model"
        title="Transcription: Remote"
      >
        🌐
         
        large-v3-turbo
      </span>
    </div>
    <div
      class="review-tabs"
    >
      <button
        class="review-tab "
      >
        Transcript
      </button>
      <button
        class="review-tab active"
      >
        SOAP
      </button>
      <button
        class="review-tab "
      >
        Insights
      </button>
    </div>
    <div
      class="review-tab-content"
    >
      <div
        class="tab-panel soap-panel"
      >
        <div
          class="soap-options"
        >
          <div
            class="soap-option-row"
          >
            <label
              class="soap-option-label"
            >
              Detail: 
              Standard
            </label>
            <div
              class="soap-detail-slider"
            >
              <input
                aria-label="SOAP note detail level"
                class="detail-slider"
                max="10"
                min="1"
                type="range"
                value="5"
              />
              <span
                class="detail-value"
              >
                5
              </span>
            </div>
          </div>
          <div
            class="soap-option-row"
          >
            <label
              class="soap-option-label"
            >
              Format
            </label>
            <div
              class="soap-format-toggle"
            >
              <button
                class="format-btn active"
              >
                Problem
              </button>
              <button
                class="format-btn "
              >
                Comprehensive
              </button>
            </div>
          </div>
          <div
            class="soap-option-row custom-instructions"
          >
            <button
              class="custom-instructions-toggle"
            >
              <span
                class="chevron-small collapsed"
              >
                ▼
              </span>
              Custom Instructions
            </button>
          </div>
        </div>
        <button
          class="btn-generate"
          disabled=""
        >
          LLM not connected
        </button>
      </div>
    </div>
    <div
      class="action-bar"
    >
      <button
        class="btn-primary"
      >
        New Session
      </button>
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders error state correctly 1`] = `
<div
  class="sidebar mode-ready"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot "
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        title="Session History"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        title="Settings"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="ready-mode"
  >
    <div
      class="auto-detect-toggle"
    >
      <label
        class="toggle-label"
      >
        <input
          class="toggle-checkbox"
          type="checkbox"
        />
        <span
          class="toggle-switch"
        />
        <span
          class="toggle-text"
        >
          Auto-detect
        </span>
      </label>
    </div>
    <div
      class="mic-preview"
    >
      <div
        class="mic-level-bar"
      >
        <div
          class="mic-level-fill"
          style="width: 0%;"
        />
      </div>
    </div>
    <button
      aria-label="Start new session"
      class="start-button-large ready "
    >
      <span
        class="start-label"
      >
        Start New Session
      </span>
    </button>
    <div
      class="ready-status"
    >
      <div
        class="permission-error-container"
      >
        <span
          class="status-error"
        >
          Microphone access denied
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders idle state correctly 1`] = `
<div
  class="sidebar mode-ready"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot idle"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        title="Session History"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        title="Settings"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="ready-mode"
  >
    <div
      class="auto-detect-toggle"
    >
      <label
        class="toggle-label"
      >
        <input
          class="toggle-checkbox"
          type="checkbox"
        />
        <span
          class="toggle-switch"
        />
        <span
          class="toggle-text"
        >
          Auto-detect
        </span>
      </label>
    </div>
    <div
      class="mic-preview"
    >
      <div
        class="mic-level-bar"
      >
        <div
          class="mic-level-fill"
          style="width: 0%;"
        />
      </div>
    </div>
    <button
      aria-label="Start new session"
      class="start-button-large ready "
    >
      <span
        class="start-label"
      >
        Start New Session
      </span>
    </button>
  </div>
</div>
`;

exports[`App Snapshots > renders recording state correctly 1`] = `
<div
  class="sidebar mode-recording"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot recording"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        disabled=""
        title="History disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        disabled=""
        title="Settings disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="recording-mode"
  >
    <div
      class="session-progress"
    >
      <div
        class="session-progress-indicator"
      >
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
      </div>
      <div
        class="session-progress-text"
      >
        Session in progress...
      </div>
    </div>
    <button
      aria-label="Audio quality - tap for details"
      class="quality-indicator good"
    >
      <span
        class="quality-dot"
      />
      <span
        class="quality-label"
      >
        Good audio
      </span>
    </button>
    <button
      aria-label="End session"
      class="stop-button "
    >
      <span
        class="stop-icon"
      />
      <span
        class="stop-label"
      >
        End Session
      </span>
    </button>
    <button
      class="transcript-toggle "
    >
      Show Transcript
    </button>
    <div
      class="model-indicator"
    >
      🌐
       
      large-v3-turbo
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders stopping state correctly 1`] = `
<div
  class="sidebar mode-recording"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot stopping"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        disabled=""
        title="History disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        disabled=""
        title="Settings disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="recording-mode"
  >
    <div
      class="session-progress"
    >
      <div
        class="session-progress-indicator"
      >
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
      </div>
      <div
        class="session-progress-text"
      >
        Session in progress...
      </div>
    </div>
    <button
      aria-label="Audio quality - tap for details"
      class="quality-indicator good"
    >
      <span
        class="quality-dot"
      />
      <span
        class="quality-label"
      >
        Good audio
      </span>
    </button>
    <button
      aria-label="Ending session..."
      class="stop-button stopping"
      disabled=""
    >
      <span
        class="stop-icon"
      />
      <span
        class="stop-label"
      >
        Ending...
      </span>
    </button>
    <button
      class="transcript-toggle "
    >
      Show Transcript
    </button>
    <div
      class="model-indicator"
    >
      🌐
       
      large-v3-turbo
    </div>
  </div>
</div>
`;

exports[`App Snapshots > renders with transcript correctly 1`] = `
<div
  class="sidebar mode-recording"
>
  <header
    class="header"
  >
    <div
      class="header-left"
    >
      <span
        class="status-dot recording"
      />
      <span
        class="app-title"
      >
        Scribe
      </span>
    </div>
    <div
      class="header-buttons"
    >
      <button
        aria-label="Session History"
        class="history-btn"
        disabled=""
        title="History disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <rect
            height="18"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="4"
          />
          <line
            x1="16"
            x2="16"
            y1="2"
            y2="6"
          />
          <line
            x1="8"
            x2="8"
            y1="2"
            y2="6"
          />
          <line
            x1="3"
            x2="21"
            y1="10"
            y2="10"
          />
        </svg>
      </button>
      <button
        aria-label="Settings"
        class="settings-btn "
        disabled=""
        title="Settings disabled during recording"
      >
        <svg
          fill="none"
          height="18"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="18"
        >
          <circle
            cx="12"
            cy="12"
            r="3"
          />
          <path
            d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"
          />
        </svg>
      </button>
    </div>
  </header>
  <div
    class="recording-mode"
  >
    <div
      class="session-progress"
    >
      <div
        class="session-progress-indicator"
      >
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
        <span
          class="pulse-dot"
        />
      </div>
      <div
        class="session-progress-text"
      >
        Session in progress...
      </div>
    </div>
    <button
      aria-label="Audio quality - tap for details"
      class="quality-indicator good"
    >
      <span
        class="quality-dot"
      />
      <span
        class="quality-label"
      >
        Good audio
      </span>
    </button>
    <button
      aria-label="End session"
      class="stop-button "
    >
      <span
        class="stop-icon"
      />
      <span
        class="stop-label"
      >
        End Session
      </span>
    </button>
    <button
      class="transcript-toggle active"
    >
      Hide Transcript
    </button>
    <div
      class="transcript-preview"
    >
      <div
        class="transcript-preview-text"
      >
        Hello, this is a test transcription.

This is the second paragraph.
      </div>
      <div
        class="transcript-preview-draft"
      >
        Still speaking...
      </div>
    </div>
    <div
      class="model-indicator"
    >
      🌐
       
      large-v3-turbo
    </div>
  </div>
</div>
`;
